# swiss-knife

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  bandit-report.json  codecov.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: _test.yml  ci.yml  docs.yml  labeler.yml  release.yml  security.yml
automation/: README.md  database_backup.py  password_generator.py  requirements.txt  screenshot_scheduler.py
convert/: README.md  batch_audio_converter.py  batch_image_converter.py  podcast_visualiser.py  requirements.txt  sound_to_video.py  wav_to_mp3.py
development_tools/: README.md  code_formatter.py  dead_code_detector.py  licence_header_injector.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TESTING.md  api-reference.md  cli-reference.md  installation.md  quickstart.md  release-checklist.md
file_management/: README.md  broken_symlinks.py  bulk_renamer.py  duplicate_finder.py  requirements.txt
network_web/: README.md  network_scanner.py  qr_generator.py  requirements.txt  website_checker.py
scripts/: _common.py  test_duplicate_finder.sh
scripts/automation/: README.md  database_backup.py  password_generator.py  screenshot_scheduler.py
scripts/convert/: README.md  batch_audio_converter.py  batch_image_converter.py
scripts/development_tools/: code_formatter.py  dead_code_detector.py  licence_header_injector.py
scripts/file_management/: README.md  broken_symlinks.py  bulk_renamer.py  duplicate_finder.py  requirements.txt
scripts/network_web/: README.md  network_scanner.py  qr_generator.py  requirements.txt  website_checker.py
scripts/system_utilities/: README.md  disk_analyzer.py  process_killer.py  requirements.txt  system_monitor.py
scripts/text_processing/: csv_converter.py  markdown_converter.py  text_merger.py  word_frequency.py
scripts/utilities/: README.md  config_merger.py  env_manager.py  excel_report_generator.py  json_formatter.py  requirements.txt
swiss_knife/: __init__.py  core.py
swiss_knife/automation/: __init__.py  password_generator.py
swiss_knife/cli/: __init__.py  _common.py  csv_cli.py  duplicate_finder.py  main.py  password_cli.py  rename_cli.py
swiss_knife/file_management/: __init__.py  bulk_renamer.py  duplicate_finder.py
swiss_knife/text_processing/: __init__.py  csv_converter.py
swiss_knife/utilities/: __init__.py  common.py
system_utilities/: README.md  disk_analyzer.py  process_killer.py  system_monitor.py
tests/: __init__.py  test_bulk_renamer.py  test_cli_csv.py  test_cli_duplicate_finder.py  test_cli_main.py  test_cli_password.py  test_cli_rename.py  test_cli_version.py  test_core.py  test_csv_converter.py  test_duplicate_finder.py  test_minimal_coverage.py  test_password_generator.py  test_utilities.py
text_processing/: README.md  csv_converter.py  markdown_converter.py  requirements.txt  text_merger.py  word_frequency.py
utilities/: README.md  config_merger.py  env_manager.py  excel_report_generator.py  json_formatter.py  requirements.txt
